syntax = "proto3";
package cirrus.api;

// message AudioFileReq {
//     string audio_tag_id = 1;
// }

message AudioMetaReq {
    string audio_tag_id = 1;
}

message AudioMetaRes {
    double content_length = 1;
    uint32 sp_packets = 2;
    double packet_dur = 3;
    uint32 orig_sample_rate = 5;
    uint32 orig_bit_rate = 4;
    uint32 channels = 6;
}

message AudioDataReq {
    string audio_tag_id = 1;
    uint32 packet_start_idx = 2;
    uint32 packet_num = 3;
    uint32 channels = 4;
    //uint64 seek_start_pkt_idx = 5;
    uint64 seek_start_pkt_ts = 5;
    uint32 pkt_read_start_offset = 6;
    //uint64 packet_start_ts = 5;
    //uint32 sample_frame_start_pos = 4;
    //uint32 sample_frames = 5;
}

//message AudioChannelSampleFrames {
//    uint32 ch_idx = 1;
//    repeated float samples = 2 [packed=true];
//    bytes encoded_samples = 2;
//}

message AudioDataRes {
    // bytes content = 1;
    uint32 packet_idx = 1;
    double sp_frame_duration = 2;
    uint32 sp_frame_num = 3;
    bytes encoded_samples = 4;
    uint64 packet_start_ts = 5;
    uint32 packet_read_start_offset = 6;

    //uint32 padded_frame_start_pos = 4;
    //repeated AudioChannelSampleFrames ch_sample_frames = 3;
}

message AudioLibraryReq {
    string path = 1;
}

message AudioTagRes {
    string id = 1;
    string artist = 2;
    string genre = 3;
    string title = 4;
}